LayoutTests/http/tests/navigation/resources/slow-resource.pl
@@ -1,0 +1,16 @@
+#!/usr/bin/perl -w
+
+# flush the buffers after each print
+select (STDOUT);
+$| = 1;
+
+print "Content-Type: text/plain\n";
+print "Expires: Thu, 01 Dec 2003 16:00:00 GMT\n";
+print "Cache-Control: no-store, no-cache, must-revalidate\n";
+print "Pragma: no-cache\n";
+print "\n";
+
+print "Test page for back/forward list that takes awhile to\n";
+sleep 5;
+print "Finish loading\n";
+
